# 100xDev

./: .gitignore
3.1 reconciler/: package-lock.json  script-less-ugly.js
3.2 todo/: package-lock.json  package.json  todoServer.solution.js
4.2-todo-app-react/: index.html
5.1-course-sellng-app/: package-lock.json  package.json
5.1-course-sellng-app/src/: App.jsx  Appbar.jsx  Courses.jsx  Signup.jsx
5.2 course-app-backend/: 03-course-app-medium.js  admins.json  package.json
7.1-course-selling-app/: package-lock.json
7.1-course-selling-app/7.2-TS/: index.js  index.ts
8.1-customHooks-Generics-Zod/: index.js  index.ts  package-lock.json  package.json  tsconfig.json
AI/AI-App/: .lintstagedrc  .prettierignore  README.md  index.ts  package-lock.json  package.json
AI/bootdev-aiagent/: main.py  pyproject.toml  tests.py
AI/mcp-server/mcp-sqlite-langchain/sqlite_mcp_langchain/: pyproject.toml
AI/n8n/: docker-compose.yml
AI/playground/: index.js  package.json
Cohort 1/12.1-openAPI-spec/: package-lock.json  package.json
Cohort 1/4.2-todo-app-react/: package-lock.json  package.json
Cohort 1/5.1-course-sellng-app/: package-lock.json  package.json
Cohort 1/5.2 course-app-backend/: 03-course-app-medium.js  courses.json  package-lock.json
Cohort 1/todo-app/: index.html  (+2 more)
Go/: helloWorld.go
Python/: blockchain.p  blockchain.py  blockchain.txt  hash_util.py
todo-app/: index.html  package-lock.json  package.json  todo.js  todoServer.js
typescript/: tsconfig.json
week-16-1-turborepo/: package.json
week-16-turborepo/: package-lock.json  package.json
(+148 files in other folders)
