[project]
name = "sqlite-mcp-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.12",
    "langchain-mcp-adapters>=0.1.10",
    "langgraph>=0.6.7",
    "load-dotenv>=0.1.0",
    "mcp>=1.14.1",
]
